<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/follow_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:context=".FollowActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/myrequests_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Requests" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/followers_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Followers" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/send_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Request" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/follow_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Following" />

        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/follow_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Your Open Requests:"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_btn">
        </TextView>

        <ListView
            android:id="@+id/request_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintBottom_toBottomOf="parent">
        </ListView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_person_blue_18dp"
            android:drawablePadding="8dp"
            android:hint="Enter Someone's Username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginStart="16dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:clickable="true"

            android:focusable="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="Send Request"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <ListView
            android:id="@+id/sent_requests_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="2sp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">
        </ListView>

        <ListView
            android:id="@+id/followers_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="2sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:background="@android:color/background_light">
        </ListView>

        <ListView
            android:id="@+id/following_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="2sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:background="@android:color/background_light">
        </ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/nav_drawer" />


</androidx.drawerlayout.widget.DrawerLayout>