...
    android:orientation="vertical"
    tools:context=".ListActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <ListView
        android:id="@+id/moodList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
...
