<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/filter"
        android:enabled="true"
        android:icon="@drawable/ic_filter_list"
        android:title="Filter"
        android:visible="true"
        app:showAsAction="always" />
</menu>